--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Intro Section -->
     <section id="intro">
       <h2>Welcome to the World of Beowulf</h2>
-      <p>Adventure awaits as you join <strong>Beowulf</strong> on his heroic quest!</p>
+      <p>Advemture awaits as you join <strong>Beowulf</strong> on his heroic quest!</p>
       <p>Choose your path: discover the <em>story</em>, meet the <em>heroes</em> and <em>villains</em>, explore <em>history</em>, or test your bravery if you <em>dare</em>.</p>
       <a class="btn" href="#story">▶ Begin the Quest</a>
     </section>
@@ -53,7 +53,7 @@
       </div>
       <div class="event">
         <h3>👹 Grendel</h3>
-        <p>The terrifying demon that hates the sound of woship. He bears sea-like features, can kill humans with one hand, and is suprisingly swift for his size. He haunted Herot for years, it wasn’t until our hero, Beowulf, that Herot’s torment came to an end. </p>
+        <p>The terrifying demon that hates the sound of woship. He bears sea-like features, can kill humans with one hand, and is suprisingly swift for his size. He haunted Herot for years, it wasn’t until the victory of our hero, Beowulf, that Herot’s torment came to an end. </p>
       </div>
       <div class="event">
         <h3>💀 Grendel’s Mother</h3>
