--- a/index.html
+++ b/index.html
@@ -112,5 +112,5 @@
   </main>
 
   <footer>
-    <p>© 2025 Beowulf Project. Forged in pixelated heroism ⚔️</p>
+    <p>© 2025 Beowulf Project. Joseph Robinson. Forged in pixelated heroism ⚔️</p>
   </footer>
